# cointrack

./: .dockerignore  .gitignore  README.md  currencies.json  docker-compose.local.yml  docker-compose.traefik.yml  docker-compose.yml  example.db  initial_data.py  prestart.sh  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 24fb512b2527_first_migration.py  ae1035ac9c8f_create_tables.py  e43c3dde70af_my_migrations.py  ef76e4a1efab_first_migration.py
app/: currencies.py  main.py  schemas.py  server.py  services.py  user_data.py  validators.py
app/api/: deps.py
app/api/api_v1/: api.py
app/clients/: gecko_client.py
app/core/: auth.py  config.py  logging_config.py  scheduler.py
app/crud/: __init__.py  base.py  crud_user.py
app/db/: base_class.py  init_db.py  models.py  session.py
app/db/json_file/: coins.csv  coins.json  currencies.csv
app/models/: __init__.py  coin.py  coin_price.py  currency.py  user.py
app/schemas/: __init__.py  coin.py  coin_price.py  currency.py  form.py  user.py
app/static/css/: choose_coin.css
app/static/javascript/: main.js
app/templates/: form.html  form_accepted.html  index.html  login.html
backend/: Dockerfile  backend_pre_start.py  prestart.sh
backend/alembic/: env.py
backend/alembic/versions/: cfdc4fc17aa7_first_migration.py  (+1 more)
backend/app/: coins.json  main.py  prestart.py  prestart.sh  pyproject.toml  requirements.txt  run.sh
backend/app/api/api_v1/endpoints/: auth.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: cointrack.py
backend/app/app/core/: config.py  security.py
backend/app/app/crud/: crud_currency.py  crud_user.py
backend/app/app/db/: session.py
backend/app/app/models/: base_class.py  currency.py  user.py
backend/app/app/notifications/: telegram_notification.py
backend/app/app/schemas/: form_decorator.py  user.py
backend/app/clients/: gecko_client.py
backend/app/core/: auth.py  config.py  logging_config.py
backend/app/crud/: crud_coin.py  crud_coin_price.py
backend/app/db/: init_db.py
backend/app/models/: __init__.py  coin_price.py
backend/app/schemas/: __init__.py  body.py
frontend/: Dockerfile  Dockerfile.build  Dockerfile.local  package-lock.json  package.json
frontend/app/: package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/src/: config.js
json_file/: add_to_db.py  convert_json_csv.py  models.py
(+17 files in other folders)
