[tool.poetry]
name = "cointrack"
version = "0.1.0"
description = "CointrackAPI"
authors = ["Paul"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "~0.11.3"
fastapi = "~0.68.0"
python-multipart = "~0.0.5"
pydantic = {extras = ["email"], version = "~1.8.1"}
Jinja2 = "^3.0.2"
requests = "^2.26.0"
SQLAlchemy = "^1.4.25"
alembic = "^1.7.4"
tenacity = "^8.0.1"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
psycopg2-binary = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
