[tool.poetry]
name = "cointrack"
version = "0.1.0"
description = "CointrackAPI"
authors = ["Paul"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "~0.68.0"
python-multipart = "~0.0.5"
pydantic = {extras = ["email"], version = "~1.8.1"}
SQLAlchemy = "^1.4.25"
alembic = "^1.7.4"
tenacity = "^8.0.1"
aiofiles = "^0.7.0"
psycopg2-binary = "^2.9.2"
uvicorn = "^0.15.0"
celery = "^5.2.1"
httpx = "^0.21.1"
APScheduler = "^3.8.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
loguru = "^0.5.3"
Jinja2 = "~3.0.2"

[tool.poetry.dev-dependencies]
psycopg2-binary = "^2.9.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
ignore = ["src/oldstuff"]
venvPath = "~/.cache/pypoetry/virtualenvs/"
venv = "pythontests-UTB4-gp5-py3.9"

reportMissingImports = true
reportMissingTypeStubs = false

